--- a/templates/noticias.html
+++ b/templates/noticias.html
@@ -370,6 +370,9 @@
                     <a class="nav-link-main" href="#">Canchas</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link-main" href="{{ url_for('ws_reservas.pagina_reservas') }}">Reservas</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link-main active" href="{{ url_for('ws_partidos.todas_las_noticias') }}">Noticias</a>
                 </li>
             </ul>
